Mobile style and layout fixes

--- a/index.html
+++ b/index.html
@@ -401,50 +401,58 @@
 
             <footer>
                 <div class="row">
-                    <div class="columns medium-4 large-2 hide-for-print">
-                        <h2>Careers</h2>
-                        <nav>
-                            <ul class="clearfix">
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Open Jobs</a></li>
-                                <li><a href="#" class="saved_jobs_link" rel="nofollow">My Saved Jobs</a></li>
-                                <li><a href="#">My Applications</a></li>
-                            </ul>
-                        </nav>
-                    </div>
-                    <div class="columns medium-4 large-2 hide-for-print">
-                        <h2>About Us</h2>
-                        <nav>
-                            <ul class="clearfix">
-                                <li><a href="#our-teams">Our Teams</a></li>
-                                <li><a href="#our-lived-values">Our Lived Values</a></li>
-                                <li><a href="#our-commitments">Our Commitments</a></li>
-                                <li><a href="#benefits-and-perks">Our Benefits and Perks</a></li>
-                                <li><a href="#encouraging-all-to-apply">Encouraging All to Apply</a></li>
-                                <li><a href="#promoted-roles">Promoted Roles</a></li>
-                                <li><a href="#our-partners">Our Partners</a></li>
-                            </ul>
-                        </nav>
+                    <div class="columns small-6">
+                        <div class="row">
+                            <div class="columns medium-6 large-4 hide-for-print">
+                                <h2>Careers</h2>
+                                <nav>
+                                    <ul class="clearfix">
+                                        <li><a href="#">Home</a></li>
+                                        <li><a href="#">Open Jobs</a></li>
+                                        <li><a href="#" class="saved_jobs_link" rel="nofollow">My Saved Jobs</a></li>
+                                        <li><a href="#">My Applications</a></li>
+                                    </ul>
+                                </nav>
+                            </div>
+                            <div class="columns medium-6 large-4 end hide-for-print">
+                                <h2>About Us</h2>
+                                <nav>
+                                    <ul class="clearfix">
+                                        <li><a href="#our-teams">Our Teams</a></li>
+                                        <li><a href="#our-lived-values">Our Lived Values</a></li>
+                                        <li><a href="#our-commitments">Our Commitments</a></li>
+                                        <li><a href="#benefits-and-perks">Our Benefits and Perks</a></li>
+                                        <li><a href="#encouraging-all-to-apply">Encouraging All to Apply</a></li>
+                                        <li><a href="#promoted-roles">Promoted Roles</a></li>
+                                        <li><a href="#our-partners">Our Partners</a></li>
+                                    </ul>
+                                </nav>
 
-                        <div class="footer__social-media">
-                            <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"><span class="show-for-sr">facebook</span></i></a>
-                            <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-x-twitter"><span class="show-for-sr">twitter</span></i></a>
-                            <a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-instagram"><span class="show-for-sr">instagram</span></i></a>
+                                <div class="footer__social-media">
+                                    <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"><span class="show-for-sr">facebook</span></i></a>
+                                    <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-x-twitter"><span class="show-for-sr">twitter</span></i></a>
+                                    <a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-instagram"><span class="show-for-sr">instagram</span></i></a>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="columns medium-4 large-2 large-offset-6 text-right">
-                        <address>
-                            <h3>ONE CENTER COURT</h3>
-                            <p>PORTLAND, OR 97227</p>
-                        </address>
-                        <p><a href="tel:+11111111111">(503) 235-8771</a></p>
+                    <div class="columns small-6">
+                        <div class="row">
+                            <div class="columns medium-6 medium-offset-6 large-4 large-offset-8 text-right">
+                                <address>
+                                    <h3>ONE CENTER COURT</h3>
+                                    <p>PORTLAND, OR 97227</p>
+                                </address>
+                                <p><a href="tel:+11111111111">(503) 235-8771</a></p>
 
-                        <h3>BOX OFFICE HOURS</h3>
-                        <p>Mon-Fri: 10:00 am–3:00 pm</p>
-                        <p style="color: #858585; font-size: 12px; line-height: 17px;">
-                            Opens 2 hours prior to<br />
-                            any Rose Quarter event<br />
-                        </p>
+                                <h3>BOX OFFICE HOURS</h3>
+                                <p>Mon-Fri: 10:00 am–3:00 pm</p>
+                                <p style="color: #858585; font-size: 12px; line-height: 17px;">
+                                    Opens 2 hours prior to<br />
+                                    any Rose Quarter event<br />
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
