Search form fix

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                     </div>
                                     <div class="page-banner__search-form">
                                         <div id="main" tabindex="-1"></div>
-                                        <form method="get" action="/search/jobs" class="search-form">
+                                        <form method="get" action="/" class="search-form">
                                             <div class="search-form__field">
                                                 <label for="cs_jobsearchforminput_keyword" class="show-for-sr">Keyword, Job Title, skills</label>
                                                 <input type="text" placeholder="Keyword, Job Title, skills" id="cs_jobsearchforminput_keyword" class="ui-autocomplete-input" autocomplete="off" name="q" value=""><span role="status" aria-live="polite" class="ui-helper-hidden-accessible"></span>
